# Circuit-Simulator-CPP

./: CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitView.cpp  CircuitView.h  Circuit_serialization.cpp  Component.cpp  Component.h  DiodeModel.h  MainWindow.cpp  MainWindow.h  PlotWindow.cpp  PlotWindow.h  PrintRequest.h  RLC_series.cir  SaveSubcircuitDialog.cpp  SaveSubcircuitDialog.h  Simulator.cpp  Simulator.h  SubCircuit.cpp  SubCircuit.h  SubCircuitItem.cpp  SubCircuitItem.h  TransientAnalysisDialog.cpp  TransientAnalysisDialog.h  ValueParser.h  WireInfo.h  capacitoritem.cpp  capacitoritem.h  cereal_registration.h  client.cpp  client.h  componentitem.cpp  componentitem.h  currentsourceitem.cpp  currentsourceitem.h  dependent_sources_test.txt  dependentsourceitems.cpp  dependentsourceitems.h  grounditem.cpp  (+41 more)
